--- a/WeMoveU.LandingPage.Web/Views/Home/Ebook.cshtml
+++ b/WeMoveU.LandingPage.Web/Views/Home/Ebook.cshtml
@@ -49,9 +49,9 @@
                 <div class="col-lg-12">
                    <!-- <img class="img-responsive" src="~/Content/img/profile.png" alt="">-->
                     <div class="intro-text">
-                        <span class="name">Lorem Ipsum</span>
+                        <span class="name">Baixe agora seu Ebook</span>
                         <hr class="star-light">
-                        <span class="skills">Evite erros comuns nesse momento</span>
+                        
                     </div>
                 </div>
             </div>
@@ -162,7 +162,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Baixe agora seu e-book!</h2>
+                    <h2>Conheça 5 maneiras de melhorar a visibilidade da sua imobiliária!</h2>
                     <hr class="star-light">
                 </div>
             </div>
@@ -227,7 +227,7 @@
                 <div class="row">
                     <div class="footer-col col-md-4">
                         <h3>Endereço</h3>
-                        <p>Rua nove de julho 
+                        <p>Avenida Nova Independencia 1064 
                             <br>São Paulo Brasil</p>
                     </div>
                     <div class="footer-col col-md-4">
