--- a/WeMoveU.LandingPage.Web/Views/Home/Agradecimento.cshtml
+++ b/WeMoveU.LandingPage.Web/Views/Home/Agradecimento.cshtml
@@ -25,7 +25,7 @@
       <h3>Baixe aqui!</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
       <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
-      <button type="button" class="btn btn-primary">Baixe aqui</button>
+      <button type="button" class="btn btn-primary" onclick="location.href='https://www.sendspace.com/file/n31ws1';">Baixe aqui</button>
     </div>
     <div class="col-sm-4">
       <h3></h3>
